@@ -1,3 +1,8 @@
+2019-01-13  Thomas Koenig  <tkoenig@gcc.gnu.org>
+
+	PR fortran/59345
+	* gfortran.dg/internal_pack_18.f90: New test.
+
 2019-01-13  H.J. Lu  <hongjiu.lu@intel.com>
 
 	* gcc.dg/pr51628-20.c: Updated.
